# effective-haskell

./: README.md
chapter1/: Chapter1.hs  Exercises1.hs  FizzBuzz.hs  Main.hs
chapter10/: DirectoryTraversal.hs  LazyIOExamples.hs  chapter10.cabal  lazyIO-results.txt
chapter10/directory-summary/: directory-summary.cabal
chapter10/directory-summary/app/: Main.hs
chapter10/directory-summary/src/: DirectoryTraversal.hs  Metrics.hs
chapter10/src/: DirectoryTraversal.hs  Metrics.hs
chapter11/filepack/: filepack.cabal
chapter11/filepack/src/: FilePack.hs
chapter2/: Exercises2.hs  Fibs.hs
chapter3/: Exercises3.hs  SumBiggest.hs  TypeHoleDemo.hs
chapter4/: BinaryTree.hs  Calculator.hs  CustomerInfo.hs  InductiveStructures.hs  Person.hs  StringParser.hs
chapter5/import-demo/: LICENSE  import-demo.cabal
chapter5/import-demo/app/: Main.hs
chapter5/learn-cabal/: learn-cabal.cabal
chapter5/module-examples/: CHANGELOG.md  module-examples.cabal
chapter5/module-examples/src/: ModuleDemo.hs
chapter5/module-examples/src/HaskellBook/: Examples.hs
chapter5/module-examples/src/HaskellBook/Examples/: SortedList.hs  UserInfo.hs
chapter5/module-examples/src/HaskellBook/Examples/Introduction/: CreatingModules.hs
chapter6/: AnyClassDemo.hs  DefaultSignaturesDemo.hs  DerivingNullable.hs  HKTDemo.hs  Natural.hs  NaturalClass.hs  Nullable.hs  OrdExample.hs  Selector.hs  TypesDemo.hs
chapter7/: Exercises7.hs  LazyIODemo.hs  Replace.hs  test.txt
chapter7/calc/: calc.cabal
chapter7/calc/app/: Main.hs
chapter7/calc/src/: Calc.hs
chapter7/calculator/: calculator.cabal
chapter7/calculator/src/: Calculator.hs
chapter7/my-calculator/: CHANGELOG.md  LICENSE  my-calculator.cabal
chapter7/my-calculator/app/: Main.hs
chapter8/: InterleaveFiles.hs
chapter8/hcat/: hcat.cabal
chapter8/hcat/src/: HCat.hs
chapter9/: Outlaw.hs  chapter9-examples.hs
