cabal-version:      3.0
name:               chapter10
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Penny Chase
maintainer:         mpchase@mac.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Metrics
        DirectoryTraversal

    -- Modules included in this library but not exported.
    -- other-modules:
    other-extensions: RecordWildCards TypeApplications
    build-depends:
        base ^>=4.16.4.0,
        containers ^>=0.6.5.1,
        time ^>=1.11.1.1,
        directory ^>=1.3.6.2,
        bytestring ^>=0.11.3.1,
        text ^>=1.2.5.0

    hs-source-dirs:   src
    default-language: Haskell2010


executable chapter10
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:
    other-extensions: RecordWildCards TypeApplications
    build-depends:
        base ^>=4.16.4.0,
        containers ^>=0.6.5.1,
        time ^>=1.11.1.1,
        directory ^>=1.3.6.2,
        bytestring ^>=0.11.3.1,
        text ^>=1.2.5.0,
        chapter10

    hs-source-dirs:   app
    default-language: Haskell2010

    ghc-options: -O2 