cabal-version:      3.0
name:               module-examples
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Penny Chase
maintainer:         mpchase@mac.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
                    , HaskellBook.Examples
                    , ModuleDemo
    other-modules:    HaskellBook.Examples.Introduction.CreatingModules
                    , HaskellBook.Examples.SortedList
                    , HaskellBook.Examples.UserInfo
    -- other-extensions:
    build-depends:    base ^>=4.17.0.0
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: RecordWildCards

executable module-examples
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.0.0,
        module-examples

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite module-examples-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.0.0,
        module-examples
