cabal-version:      3.0
name:               calc
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Penny Chase
maintainer:         mpchase@mac.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:   Calc
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.0.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable calc
    import:           warnings
    main-is:          Main.hs
    -- other-modules:  
    -- other-extensions:
    build-depends:
        base ^>=4.17.0.0,
        calc

    hs-source-dirs:   app
    default-language: Haskell2010
